--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,18 +1,17 @@
 <html>
-    <head>
-        <script src="./index.js"></script>
-    </head>
-    <body>
-        Browser base64 Session Description<br />
-        <textarea id="localSessionDescription" readonly="true"></textarea> <br />
 
-        Golang base64 Session Description<br />
-        <textarea id="remoteSessionDescription"> </textarea> <br/>
+<head>
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./index.js"></script>
+</head>
 
-        <br />
-        <div id="remoteAudio"></div> <br />
+<body>
+    <div id="remoteAudio"></div> <br />
+    <div class="center-container">
+        <div class="center">
+            <button class="button-dark" id="start">START</button>
+        </div>
+    </div>
+</body>
 
-        Logs<br />
-        <div id="div"></div>
-    </body>
 </html>
